fix spacing on body top margin after making header more compact (as a result of hiding appheader search box)

--- a/stylesrc/theme-software-dark/theme-base.less
+++ b/stylesrc/theme-software-dark/theme-base.less
@@ -84,7 +84,7 @@ hr{ // why so big
 
 
 body{
-  margin-top: 130px; //space out the page top to accommodate fixed nav at starting scroll position
+  margin-top: 100px; //space out the page top to accommodate fixed nav at starting scroll position
   background: @theme-background;
   font-family: @font-sans;
   color: @base-text-color;
